--- a/charts/swissknife/values.yaml
+++ b/charts/swissknife/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: registry.digitalocean.com/swissknife/swissknife
   pullPolicy: IfNotPresent
-  tag: "v0.1.2"
+  tag: "v0.1.2-websocket"
 
 imagePullSecrets: []
 nameOverride: ""
